--- a/tasks/known_hosts.yml
+++ b/tasks/known_hosts.yml
@@ -1,17 +1,13 @@
 # fetch ssh host key and store the key into the local known_hosts file
 ---
-- name: Get SSH port for new host(s).
-  delegate_to: localhost
-  become: false
-  set_fact:
-    bootstrap_ssh_port: "{{ hostvars[inventory_hostname]['ansible_ssh_port'] | default('22') }}"
-
 - name: Ensure ssh host key(s) are cached.
   delegate_to: localhost
+  run_once: true
   become: false
   known_hosts:
     path: "{{ bootstrap_ssh_key_hosts_file | d(omit) }}"
-    host: "{{ inventory_hostname }}"
-    key: "{{ lookup('pipe', 'ssh-keyscan -t ' + bootstrap_ssh_key_type + ' -p ' + bootstrap_ssh_port + ' ' + inventory_hostname) }}"
+    host: "{{ item }}"
+    key: "{{ lookup('pipe', 'ssh-keyscan -t ' + bootstrap_ssh_key_type + ' -p ' + (hostvars[item]['ansible_ssh_port'] | default('22')) + ' ' + item) }}"
     state: present
     hash_host: "{{ bootstrap_ssh_key_hash_hostname }}"
+  with_items: "{{ ansible_play_batch }}"
