don't update ssh-key in known_hosts if it already exists
- technically, could allow MITM otherwise
- however, doesn't prevent MITM on first connection

--- a/tasks/known_hosts.yml
+++ b/tasks/known_hosts.yml
@@ -1,19 +1,35 @@
-# fetch ssh host key and store the key into the local known_hosts file
+# fetch ssh host key(s) and store into the local known_hosts file
 ---
-- name: Get SSH host key for new host(s).
+- name: Check for cached SSH host key
+  delegate_to: localhost
+  become: false
+  lineinfile:
+    path: "{{ bootstrap_ssh_key_hosts_file | d(bootstrap_ssh_key_hosts_file_default) }}"
+    regexp: '^{{ inventory_hostname }}(,[0-9.]+)? .*'  # note embedded space
+    state: absent
+  check_mode: yes
+  changed_when: false
+  register: bootstrap_ssh_host_key_cached
+
+- name: Fetch SSH host key
   delegate_to: localhost
   become: false
   set_fact:
-    bootstrap_ssh_host_key: "{{ lookup('pipe', 'ssh-keyscan -t ' + bootstrap_ssh_key_type + ' -p ' + (hostvars[inventory_hostname]['ansible_ssh_port'] | default('22')) + ' ' + inventory_hostname + ' 2>/dev/null') }}"
+    bootstrap_ssh_host_key: "{{ lookup('pipe',
+                                       'ssh-keyscan'
+                                          + ' -t ' + bootstrap_ssh_key_type
+                                          + ' -p ' + (hostvars[inventory_hostname]['ansible_ssh_port'] | default('22'))
+                                          + ' ' + inventory_hostname
+                                          + ' 2>/dev/null') }}"
+                                          # + ,ip-address
+  when:
+    - not ( bootstrap_ssh_host_key_cached['found'] | d(false) )
+    # - not bootstrap_ssh_host_key_cached.found
+    # - (hostvars[inventory_hostname]['ansible_connection'] in [ ssh, paramiko ])
   failed_when:
     - (bootstrap_ssh_host_key | d("")) == ""
 
-# - name: debug
-#   delegate_to: localhost
-#   debug:
-#     msg: "{{ inventory_hostname }} : '{{ bootstrap_ssh_host_key }}'"
-
-- name: Ensure SSH host key(s) are cached.
+- name: Update SSH host key cache
   delegate_to: localhost
   run_once: true
   become: false
@@ -24,3 +40,5 @@
     state: present
     hash_host: "{{ bootstrap_ssh_key_hash_hostname }}"
   with_items: "{{ ansible_play_batch }}"
+  when:
+    - hostvars[item]['bootstrap_ssh_host_key'] is defined
