Support FreeBSD (ver: 11 & 12)
 - no automated tests, since no easy docker images

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -28,6 +28,10 @@ galaxy_info:
         - trusty
         - xenial
         - bionic
+    - name: FreeBSD
+      versions:
+        - 11
+        - 12
   galaxy_tags:
     - bootstrap
     - python
