--- a/tasks/known_hosts.yml
+++ b/tasks/known_hosts.yml
@@ -50,7 +50,7 @@
       when:
         - not ( bootstrap_ssh_host_key_cached['found'] | d(false) )
       failed_when:
-        - bootstrap_ssh_host_key | d("") | length > 0
+        - bootstrap_ssh_host_key | d("") | length <= 0
 
     - name: Update SSH host key cache
       run_once: true
