--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,20 +14,28 @@ galaxy_info:
       versions:
         - 6
         - 7
+        - 8
     - name: Fedora
       versions:
         - 26
         - 27
+        - 28
+        - 29
+        - 30
+        - 31
     - name: Debian
       versions:
         # - wheezy
         - jessie
         - stretch
+        - buster
     - name: Ubuntu
       versions:
         - trusty
         - xenial
         - bionic
+        - disco
+        - eoan
     - name: FreeBSD
       versions:
         - 11.0
