remove disco as listed supported
Galaxy is picky.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -34,7 +34,7 @@ galaxy_info:
         - trusty
         - xenial
         - bionic
-        - disco
+        # - disco
         - eoan
     - name: FreeBSD
       versions:
