--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,10 @@
 ---
 language: python
 services: docker
-# python:
-#   - "2.7"
-#   - "3.6"
-services:
-  - docker
-# dist: xenial
-# env:
-#   - GOPATH=~/gopath
-# install:
-#   - ./molecule/setup.sh
+os: linux
+dist: xenial
 install:
   - pip install ansible molecule docker
+  - pip install yamllint ansible-lint flake8
 script:
-  - molecule --version
-  - ansible --version
-  # - molecule test
+  - molecule test
