--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,4 +3,4 @@
   hosts: all
   gather_facts: false
   roles:
-    - role: eengstrom.bootstrap
+    - role: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
